--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "jest": "^22.0.0",
     "prettier": "^1.9.2",
     "puppeteer": "^1.1.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "puppeteer-to-istanbul": "^1.2.2",
+    "nyc": "^12.0.2",
+    "request":"^2.87.0"
   }
 }
